Fix small layout on iPhone screen.

--- a/conweb/static/stylus/_layout.styl
+++ b/conweb/static/stylus/_layout.styl
@@ -107,6 +107,9 @@
   padding: 0 40px;
   max-width: 1200px;
   margin: 0 auto;
+  @media $iphone-query {
+    padding: 0 20px;
+  }
 }
 
 .footnote {
