--- a/conweb/static/stylus/_richpage.styl
+++ b/conweb/static/stylus/_richpage.styl
@@ -2,6 +2,9 @@
   padding: 2.5em 3em;
   margin-bottom 1.5em;
   background-color: #fff;
+  @media $iphone-query {
+    padding: 0;
+  }
 }
 .paper-title {
   padding-bottom: 0.3em;
