--- a/conweb/static/stylus/_typography.styl
+++ b/conweb/static/stylus/_typography.styl
@@ -20,7 +20,7 @@
   color: $main-green;
 
   @media $mobile-query {
-    font-size: 24px;
+    font-size: 32px;
   }
 }
 
